--- a/config/cache.yml
+++ b/config/cache.yml
@@ -2,10 +2,11 @@ default: &default
   store_options:
     # Cap age of oldest cache entry to fulfill retention policies
     # max_age: <%= 60.days.to_i %>
-    max_size: <%= 256.megabytes %>
+    max_size:  <%= ENV.fetch("CACHE_MAX_SIZE", 10.gigabytes) %>
     namespace: <%= Rails.env %>
 
 development:
+  database: cache
   <<: *default
 
 test:
