--- a/config/database.yml
+++ b/config/database.yml
@@ -13,13 +13,14 @@
 # gem "pg"
 #
 default: &default
-  adapter: postgresql
+  adapter: postgis
+  postgis_extension: true
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
-cache_default: &cache_default
+sqlite: &sqlite
   adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
@@ -32,14 +33,14 @@ development:
     encoding: unicode
     postgis_extension: true
     database: food_delivery_development
-
   cache:
-    <<: *cache_default
-    database: solid/food_delivery_development_cache.sqlite3
+    <<: *sqlite
+    database: storage/food_delivery_development_cache.sqlite3
     migrations_paths: db/cache_migrate
-  
   queue:
-    <<: *cache_default
+    <<: *sqlite
+    database: storage/food_delivery_development_queue.sqlite3
+    migrations_paths: db/queue_migrate
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
